# X2G-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: building_to_grid.yaml
data_sample/opendss/: master.dss  simple_radial_feeder.dss
docs/cases/: building_to_grid.md
scripts/: chat_building_to_grid.py  run_building_to_grid.py
src/x2g_agent/: __init__.py  cli.py  config.py  io.py  models.py  workflow.py
src/x2g_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/x2g_agent/agents/: __init__.py  base.py  energyplus.py  energyplus_agent.py  load_mapping.py  load_mapping_agent.py  metrics.py  metrics_agent.py  opendss.py  opendss_agent.py  report.py  report_agent.py
src/x2g_agent/cases/: __init__.py
src/x2g_agent/cases/building_to_grid/: __init__.py  workflow.py
src/x2g_agent/chat/: __init__.py  chat_agent.py  config_builder.py  intent_parser.py  llm_intent_parser.py  result_summarizer.py
src/x2g_agent/tools/: __init__.py  energyplus.py  energyplus_tool.py  grid_metrics.py  load_parser.py  opendss.py  opendss_tool.py
tests/: test_building_to_grid_mock.py  test_chat_config_builder.py  test_chat_intent_parser.py  test_energyplus_real_mode.py  test_llm_intent_parser.py  test_opendss_direct_compile.py
