[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x2g-agent"
version = "0.1.0"
description = "Agentic workflows for coordinating end-use energy simulation and power-grid simulation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "X2G-Agent contributors" }]
dependencies = [
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "opendssdirect.py>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
x2g-building-to-grid = "x2g_agent.cli:run_building_to_grid"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
